# gba

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.local.json
apps/gba-cli/: Cargo.toml
apps/gba-cli/src/: app.rs  cli.rs  main.rs  tui.rs
crates/gba-core/: Cargo.toml
crates/gba-core/src/: agent.rs  config.rs  error.rs  executor.rs  lib.rs
crates/gba-pm/: Cargo.toml
crates/gba-pm/src/: error.rs  kind.rs  lib.rs  manager.rs  template.rs
crates/gba-pm/templates/: create_pr.jinja  execute_phase.jinja  execute_phase_resume.jinja  fix_hook_error.jinja  fix_review_issue.jinja  fix_verification_error.jinja  init.jinja  plan_generate.jinja  plan_refine.jinja  plan_start.jinja  review.jinja  system.jinja  verification.jinja
specs/: 0001-design.md
