[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Your Name <YourName@yourdomain.com>"]
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"

[workspace.dependencies]
# Internal crates
gba-core = { path = "crates/gba-core" }
gba-pm = { path = "crates/gba-pm" }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }

# Claude Agent SDK
claude-agent-sdk-rs = "0.6"

# Template engine
minijinja = { version = "2.7", features = ["loader"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Builder pattern
typed-builder = "0.20"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
