[package]
name = "gba-core"
description = "Core execution engine for GBA (Geektime Bootcamp Agent)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
gba-pm = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
typed-builder = { workspace = true }
tracing = { workspace = true }
